objects/ERP_Customer_Material_Key__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used to differentiate the Component and its assosicated values in the record.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Price Group</fullName>
                </value>
                <value>
                    <fullName>Material Price Group</fullName>
                </value>
                <value>
                    <fullName>Price List Type</fullName>
                </value>
                <value>
                    <fullName>Sales Office</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Material Group 3</fullName>
                </value>
                <value>
                    <fullName>Material Group 4</fullName>
                </value>
                <value>
                    <fullName>Terms of Payment</fullName>
                </value>
                <value>
                    <fullName>Pricing Exception</fullName>
                </value>
                <value>
                    <fullName>Incoterms</fullName>
                </value>
                <value>
                    <fullName>Sales Type</fullName>
                </value>
                <value>
                    <fullName>Variant</fullName>
                </value>
                <value>
                    <fullName>Sales Order Type</fullName>
                </value>
                <value>
                    <fullName>Sales District</fullName>
                </value>
                <value>
                    <fullName>Material Group 1</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Document Currency</fullName>
                </value>
                <value>
                    <fullName>Material Group 5</fullName>
                </value>
                <value>
                    <fullName>Plant</fullName>
                </value>
                <value>
                    <fullName>Customer Group 4</fullName>
                </value>
                <value>
                    <fullName>Distributor Code</fullName>
                </value>
                <value>
                    <fullName>Shipping Condition</fullName>
                </value>
                <value>
                    <fullName>Sales Order Item</fullName>
                </value>
                <value>
                    <fullName>Value Center</fullName>
                </value>
                <value>
                    <fullName>Ext Matl Grp</fullName>
                </value>
                <value>
                    <fullName>Material Group 2</fullName>
                </value>
                <value>
                    <fullName>Price Zone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ERP Customer - Material Key</label>
    <nameField>
        <displayFormat>CMK-{00000}</displayFormat>
        <label>ERP Customer - Material Key Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Customer - Material Key</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>